policy fix dropdown alignment

--- a/repos/web/style/_policy_variables.less
+++ b/repos/web/style/_policy_variables.less
@@ -5,7 +5,7 @@
 // =============================================================================
 
 // Sizes
-@size-scale: 75%; // ignored, since app is integrated as widget, no control of html
+@size-scale: 100%; // ignored, since app is integrated as widget, no control of html
 @size-base: 1rem; // default text size, used to scale all other sizes, like button, etc.
 @size-base-px: px(@size-base);
 @size-base-space: size(round(@size-base-px * 1/4)); // character spacing
@@ -61,7 +61,7 @@
 @padding-largest: @margin-largest;
 
 // Border
-@border-size: size(1);
+@border-size:           1px; // EIS alignment fix with px, because html font size cannot be adjusted to @size-scale
 @border-size-thick: @border-size * 2;
 @border: @border-size @border-style;
 @border-base: @border @color-border;
